# VG101-2019Summer

./: README.md
518370910123_CaoHangrui_p1/: Acardraw.m  Drawroad.m  Initialize.m  Main.m  Plotcar.m  README.md  avoidCrash.m  avoidcarCrash.m  calculate.m  changelog.txt  dealAll.m  detectCrash.m  detectDistance.m  getInput.m  initializeCrosscar.m  lightState.m  makePlate.m  moveCar.m  rotateCar.m  speedChange.m
Group16_p3/: CMakeLists.txt  Curve.cpp  Curve.h  Group.cpp  Group.h  Park.cpp  Park.h  Setting.cpp  Setting.h  UFO.cpp  car.cpp  car.h  generic_parkinglot.cpp  generic_parkinglot.h  p3.cpp  p3.h  part1main.cpp  spacecraft.cpp  spacecraft.h  test.cpp
p2withoutGTK/: Dynamicarray.c  Dynamicarray.h  cardDef.c  cardDef.h  demomode.c  demomode.h  main.c  manmachine.c  manmachine.h
